--- a/src/app.css
+++ b/src/app.css
@@ -1,70 +1,7 @@
+@import url(fonts.css);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* src/styles/global.css */
-@font-face {
-	font-family: 'Geist';
-	src: url('/fonts/Geist-Thin.woff2') format('woff2');
-	font-weight: 100;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Geist';
-	src: url('/fonts/Geist-ExtraLight.woff2') format('woff2');
-	font-weight: 200;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Geist';
-	src: url('/fonts/Geist-Light.woff2') format('woff2');
-	font-weight: 300;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Geist';
-	src: url('/fonts/Geist-Regular.woff2') format('woff2');
-	font-weight: 400;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Geist';
-	src: url('/fonts/Geist-Medium.woff2') format('woff2');
-	font-weight: 500;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Geist';
-	src: url('/fonts/Geist-SemiBold.woff2') format('woff2');
-	font-weight: 600;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Geist';
-	src: url('/fonts/Geist-Bold.woff2') format('woff2');
-	font-weight: 700;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Geist';
-	src: url('/fonts/Geist-ExtraBold.woff2') format('woff2');
-	font-weight: 800;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Geist';
-	src: url('/fonts/Geist-Black.woff2') format('woff2');
-	font-weight: 900;
-	font-style: normal;
-}
 
 @layer base {
 	:root {
@@ -96,6 +33,7 @@
 		--sidebar-accent-foreground: 240 5.9% 10%;
 		--sidebar-border: 220 13% 91%;
 		--sidebar-ring: 217.2 91.2% 59.8%;
+		--sd-bg-color: #f1f5f9;
 	}
 
 	.dark {
@@ -115,7 +53,7 @@
 		--secondary-foreground: 210 40% 98%;
 		--accent: 217.2 32.6% 17.5%;
 		--accent-foreground: 210 40% 98%;
-		--destructive: 0 62.8% 30.6%;
+		--destructive: 0 62.8% 50%;
 		--destructive-foreground: 210 40% 98%;
 		--ring: 212.7 26.8% 83.9%;
 		--sidebar-background: 240 5.9% 10%;
@@ -126,6 +64,7 @@
 		--sidebar-accent-foreground: 240 4.8% 95.9%;
 		--sidebar-border: 240 3.7% 15.9%;
 		--sidebar-ring: 217.2 91.2% 59.8%;
+		--sd-bg-color: #1e293b;
 	}
 }
 
@@ -138,6 +77,47 @@
 	}
 }
 
+::-webkit-scrollbar {
+	width: 0.75rem;
+	height: 0.75rem;
+}
+
+::-webkit-scrollbar-thumb {
+	border: solid 2px hsl(var(--background));
+	border-radius: 15px;
+	background-color: hsl(var(--muted-foreground)) !important;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	border: solid 1px hsl(var(--background));
+	cursor: grabbing;
+}
+
+::-webkit-scrollbar-track {
+	--tw-bg-opacity: 1 !important;
+	background-color: hsl(var(--muted) / var(--tw-bg-opacity)) !important;
+	border-radius: 15px;
+	border: solid 3px hsl(var(--background));
+}
+
+::-webkit-scrollbar-corner {
+	background: rgba(0, 0, 0, 0);
+}
+
 body {
 	font-family: 'Geist', sans-serif;
+}
+
+.mono {
+	font-family: 'GeistMono', monospace;
+}
+
+.super-debug {
+	z-index: -1;
+	min-width: 100%;
+	min-height: 100%;
+	box-sizing: border-box;
+	width: fit-content;
+	height: fit-content;
+	font-size: small;
 }
